@@ -1,18 +1,22 @@
 import React, { useEffect, useState } from "react";
 import { useHistory, useParams } from "react-router-dom";
-import { listTables, updateTable } from "../../utils/api";
-// import SeatReservationForm from "./SeatReservationForm";
+import { readReservation, listTables, updateTable } from "../../utils/api";
 
 function SeatReservation() {
   const [tables, setTables] = useState([]);
   const { reservation_id } = useParams();
+  const [reservation, setReservation] = useState([]);  
+  
+  const [selectedTableId, setSelectedTableId] = useState("");
+  
+  const history = useHistory();
   
   // use reservationId to find people in party
   // and save as var partySize
-
-  const [selectedTableId, setSelectedTableId] = useState("");
-
-  const history = useHistory();
+  useEffect(() => {
+    readReservation(reservation_id).then(setReservation);
+  }, [reservation_id]);
+ const { people } = reservation;
 
   // load all tables
   useEffect(() => {
@@ -20,34 +24,41 @@ function SeatReservation() {
   }, []);
 
   // select only tables with status: "Free"
+  // and capacity >= people in the reservation
   const availableTables = tables.filter(
-    (table) => table.reservation_id === null
+    (table) => table.reservation_id === null && table.capacity >= people
   );
 
   const handleChange = (e) => {
     setSelectedTableId(e.target.value);
-    console.log(selectedTableId);
   };
 
-  const handleSubmit = async (e) => {
+  const handleSeatSubmit = async (e) => {
     e.preventDefault();
+    const abortController = new AbortController();
+
+    try {
     await updateTable(selectedTableId, reservation_id);
     history.push("/dashboard");
+  } catch (error) {
+    console.log(error);
+    console.log(error.message)
+  }
+  return () => abortController.abort();
   };
 
   return (
-    <form onSubmit={handleSubmit}>
-      <div className="col-md-3 align-ctr">
-        <h4 className="mt-3">Seat a Reservation</h4>
-        <label htmlFor="selectOptions" className="mr-3">
-          Select a Table:
+    <form onSubmit={handleSeatSubmit}>
+      <div className="col-md-4 align-ctr">
+        <h3 className="mt-3 mb-3">Seat a Reservation</h3>
+        <label htmlFor="selectOptions" className="lead">
+          Select a Table for party of {people} :
         <select
           className="form-select"
-          // value={selectedTable}
           id="dropdown"
-          // name="table_id"
           onChange={handleChange}
         >
+          <option value="" disabled selected>Select:</option>
           {availableTables.map((table) => (
             <option key={table.table_id} value={table.table_id}>
               {table.table_name} - Capacity: {table.capacity}
